fixed the height bug on mobile for login-page

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -105,7 +105,7 @@ button {
 
 .page-grey {
   background-color: $backgroundColorGreyPage;
-  height: 100%;
+  height: 100svh;
 
   main {
     min-height: 100svh;
